# trash-rs

./: .editorconfig  .env  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
src/trash/: macos.rs  mod.rs  windows.rs
